--- a/authorizer-app/src/app/admin/containers/dashboard-page/dashboard-page.component.html
+++ b/authorizer-app/src/app/admin/containers/dashboard-page/dashboard-page.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <mat-card>
+  <mat-card appearance="outlined">
     <mat-card-content>
       <ng-container *ngIf="!projects.length">{{ 'ADMIN.DASHBOARD_PAGE.noProject' | translate }}</ng-container>
       <ng-container *ngIf="!sourceClients.length">{{ 'ADMIN.DASHBOARD_PAGE.noSourceClient' | translate }}</ng-container>
