--- a/authorizer-app/src/app/auth/containers/login-page/login-page.component.html
+++ b/authorizer-app/src/app/auth/containers/login-page/login-page.component.html
@@ -1,5 +1,5 @@
 <div class="card-container">
-  <mat-card>
+  <mat-card appearance="outlined">
     <app-message *ngIf="stateCommand === AuthStateCommand.SESSION_EXPIRED"
                  [type]="MessageBoxType.WARNING"
     >
