--- a/authorizer-app/src/app/shared/containers/authorization-complete-page/authorization-complete-page.component.html
+++ b/authorizer-app/src/app/shared/containers/authorization-complete-page/authorization-complete-page.component.html
@@ -4,7 +4,7 @@
 </div>
 
 <div *ngIf="!isLoading" class="card-container">
-  <mat-card>
+  <mat-card appearance="outlined">
 
     <mat-card-header *ngIf="!error">
       <mat-card-title>
