--- a/authorizer-app/src/app/admin/components/users-list/users-list.component.html
+++ b/authorizer-app/src/app/admin/components/users-list/users-list.component.html
@@ -7,7 +7,7 @@
     <ng-container *ngTemplateOutlet="filtersContainer"></ng-container>
   </div>
   <button mat-mini-fab class="mini-fab-filters" color="primary" (click)="openTemplateSheetMenu()"><mat-icon>filter_list</mat-icon></button>
-  <ng-template let-bottomSheetRef="bottomSheetRef" #templateBottomSheet>
+  <ng-template #templateBottomSheet>
     <div class="mobile-filter-container">
       <ng-container *ngTemplateOutlet="filtersContainer"></ng-container>
     </div>
