--- a/authorizer-app/src/app/admin/components/users-list/users-list.component.html
+++ b/authorizer-app/src/app/admin/components/users-list/users-list.component.html
@@ -122,11 +122,11 @@
 </div>
 
 <ng-template #filtersContainer>
-  <div>
+  <div class="filter-fields">
     <mat-form-field *ngFor="let filter of filters"
                     class="form-field"
                     [style]="'width: '+ filter.width +'px; max-width: 100%;'"
-                    appearance="outline">
+                    appearance="outline" subscriptSizing="dynamic">
       <mat-label>{{filter.name | translate}}</mat-label>
       <mat-select *ngIf="filter.type == 'select'"
                   name="{{filter.columnProp}}"
