--- a/authorizer-app/src/app/admin/containers/user-dialog/user-dialog.component.scss
+++ b/authorizer-app/src/app/admin/containers/user-dialog/user-dialog.component.scss
@@ -1,10 +1,21 @@
-.dialog-title-wrapper {
-  display: flex;
+@use '@material/dialog/dialog-theme' as mdc-dialog-theme;
+@use '@material/theme/theme-color' as mdc-theme-color;
+
+::ng-deep .mdc-dialog__title {
+  display: flex !important;
   align-items: center;
   justify-content: space-between;
-  p {
-    margin: 0;
-  }
+  padding-top: 8px !important;
+}
+
+::ng-deep .mat-mdc-dialog-container {
+  $on-surface: mdc-theme-color.$on-surface;
+  $text-emphasis-high: mdc-theme-color.text-emphasis(high);
+
+  @include mdc-dialog-theme.theme((
+          supporting-text-color: rgba($on-surface, $text-emphasis-high),
+          supporting-text-size: 14px,
+  ));
 }
 
 mat-dialog-actions {
