--- a/authorizer-app/src/styles.scss
+++ b/authorizer-app/src/styles.scss
@@ -26,7 +26,9 @@ $theme: mat.define-light-theme((
                 accent: $theme-accent,
                 warn: $theme-warn,
         ),
-        typography: mat.define-typography-config(),
+        typography: mat.define-typography-config(
+                $font-family: 'Roboto, Arial, sans-serif'
+        ),
 ));
 
 // Include theme styles for core and each component used in your app.
@@ -34,7 +36,13 @@ $theme: mat.define-light-theme((
 // that you are using.
 @include mat.all-component-themes($theme);
 
-html, body { font-family: Roboto, Arial, sans-serif; width: 100%; height: 100%; margin: 0; background-color: aliceblue; font-size: 14px;}
+html, body {
+  font-family: Roboto, Arial, sans-serif;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  background-color: aliceblue;
+}
 
 .loader-container {
   position: fixed;
@@ -49,11 +57,11 @@ html, body { font-family: Roboto, Arial, sans-serif; width: 100%; height: 100%; 
   flex-direction: column;
 }
 
-.container{
+.container {
   padding: 16px;
 }
 
-.card-container{
+.card-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -65,12 +73,12 @@ html, body { font-family: Roboto, Arial, sans-serif; width: 100%; height: 100%; 
     width: 400px;
   }
 
-  mat-card-header{
+  mat-card-header {
     justify-content: center;
     text-align: center;
   }
 
-  mat-card-content{
+  mat-card-content {
     text-align: center;
   }
 
@@ -115,13 +123,5 @@ html, body { font-family: Roboto, Arial, sans-serif; width: 100%; height: 100%; 
   .mat-dialog-title p{
     font-size: 14px;
   }
-
-  .action-buttons-container div{
-    display: flex;
-    flex-direction: column;
-    button {
-      margin-bottom: 8px;
-      margin-left: 0;
-    }
-  }
 }
+
