--- a/authorizer-app/src/styles.scss
+++ b/authorizer-app/src/styles.scss
@@ -103,6 +103,10 @@ html, body {
   width: 100%;
 }
 
+.small-text {
+  font-size: 0.9rem;
+}
+
 @media only screen and (max-width: 600px) {
   /* [320px -> 600px] */
 
